--- a/Compose Knowledge Base/app/src/main/res/values/strings.xml
+++ b/Compose Knowledge Base/app/src/main/res/values/strings.xml
@@ -5,4 +5,12 @@
     <string name="title3">In this tutorial, you build a simple UI component with declarative functions. You call Compose functions to say what elements you want and the Compose compiler does the rest. Compose is built around Composable functions. These functions let you define your app\'s UI programmatically because they let you describe how it should look and provide data dependencies, rather than focus on the process of the UI\'s construction, such as initializing an element and then attaching it to a parent. To create a Composable function, you add the @Composable annotation to the function name.</string>
     <string name="task">All tasks completed</string>
     <string name="nice">Nice work!</string>
+    <string name="txtComposable">Text composable</string>
+    <string name="NdTxtComposable">Displays text and follows the recommended Material Design guidelines.</string>
+    <string name="imgComposable">Image composable</string>
+    <string name="NdImgComposable">Creates a composable that lays out and draws a given Painter class object.</string>
+    <string name="rowComposable">Row composable</string>
+    <string name="NdRowComposable">A layout composable that places its children in a horizontal sequence.</string>
+    <string name="columnComposable">Column composable</string>
+    <string name="NdColumnComposable">A layout composable that places its children in a vertical sequence.</string>
 </resources>
